--- a/app/src/main/res/layout/fragment_add_receipt.xml
+++ b/app/src/main/res/layout/fragment_add_receipt.xml
@@ -23,11 +23,25 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:src="@drawable/ic_star"
-        app:layout_constraintEnd_toStartOf="@+id/tvRating"
+        app:layout_constraintEnd_toStartOf="@+id/etRating"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTitle" />
+
+    <EditText
+        android:id="@+id/etRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="1"
+        android:textSize="18sp"
+        android:layout_marginStart="4dp"
+        android:fontFamily="@font/montserrat_alternates_medium"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvRating"
+        app:layout_constraintEnd_toStartOf="@+id/tvRating"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/ivRating"
+        app:layout_constraintTop_toTopOf="@+id/ivRating" />
 
     <TextView
         android:id="@+id/tvRating"
@@ -35,11 +49,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:fontFamily="@font/montserrat_alternates_medium"
-        android:text="0/10"
+        android:text="/10"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ivTime"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ivRating"
+        app:layout_constraintStart_toEndOf="@+id/etRating"
         app:layout_constraintTop_toTopOf="@+id/ivRating" />
 
     <ImageView
