--- a/app/src/main/res/layout/item_ingridient_middle.xml
+++ b/app/src/main/res/layout/item_ingridient_middle.xml
@@ -41,7 +41,18 @@
         android:id="@+id/tvCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1 кг"
+        android:text="1"
+        android:layout_marginEnd="4dp"
+        android:fontFamily="@font/montserrat_alternates_semibold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tvCountMeasure"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvCountMeasure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="шт."
         android:layout_marginEnd="15dp"
         android:fontFamily="@font/montserrat_alternates_semibold"
         app:layout_constraintBottom_toBottomOf="parent"
