--- a/app/src/main/res/layout/item_ingridient_top_add.xml
+++ b/app/src/main/res/layout/item_ingridient_top_add.xml
@@ -41,10 +41,24 @@
         android:id="@+id/etCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
+        android:textSize="18sp"
+        android:layout_marginEnd="4dp"
         android:background="@android:color/transparent"
-        android:fontFamily="@font/montserrat_alternates_semibold"
+        android:fontFamily="@font/montserrat_alternates_medium"
         android:text="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/etCountMeasure"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/etCountMeasure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:textSize="18sp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/montserrat_alternates_medium"
+        android:text="шт."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
